--- a/LectureNotes_Upload/Lecture_1_course_logistics.Rmd
+++ b/LectureNotes_Upload/Lecture_1_course_logistics.Rmd
@@ -14,7 +14,7 @@ bibliography: AppliedStat.bib
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.width = 5, fig.height = 3, message=FALSE, warning=FALSE, cache = TRUE)
+knitr::opts_chunk$set(echo = TRUE, fig.width = 5, fig.height = 3, message=FALSE, warning=FALSE)
 set.seed(0)
 ```
 
